javascript/ql/test/query-tests/LanguageFeatures/SyntaxError/SyntaxError.qlref
query: LanguageFeatures/SyntaxError.ql
postprocess: utils/test/InlineExpectationsTestQuery.ql
